syntax = "proto3";
option go_package = "/user";

package user;

service UserService {
    rpc ListUser(Empty) returns (ListUserResponse) {};
    rpc Register(RegisterUserRequest) returns (Empty) {};
}

message Empty {}

message User {
    uint64 id = 1;
    string first_name = 2;
    string last_name = 3;
    string date_of_birth = 4;
}

message ListUserResponse {
    repeated User users = 1;
}

message RegisterUserRequest {
    string first_name = 1;
    string last_name = 2;
    string date_of_birth = 3;
}


